tests/baselines/reference/es3-oldStyleOctalLiteralTypes.errors.txt
error TS5108: Option 'target=ES3' has been removed. Please remove it from your configuration.
es3-oldStyleOctalLiteralTypes.ts(1,8): error TS1121: Octal literals are not allowed. Use the syntax '0o10'.
es3-oldStyleOctalLiteralTypes.ts(2,8): error TS1121: Octal literals are not allowed. Use the syntax '-0o20'.


!!! error TS5108: Option 'target=ES3' has been removed. Please remove it from your configuration.
==== es3-oldStyleOctalLiteralTypes.ts (2 errors) ====
    let x: 010;
           ~~~
!!! error TS1121: Octal literals are not allowed. Use the syntax '0o10'.
    let y: -020;
           ~~~~
!!! error TS1121: Octal literals are not allowed. Use the syntax '-0o20'.
    